--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestionp
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
